# nullsec-mac

./: README.md
c/: persist.c  privesc_scan.c
go/: clipboard.go  inject.go  keychain_dump.go  netscan.go
rust/: Cargo.toml
rust/src/: main.rs
