[package]
name = "nullsec-exfil-mac"
version = "1.0.0"
edition = "2021"
authors = ["bad-antics <@AnonAntics>"]
description = "NullSec macOS File Exfiltrator - Fast Rust-based file discovery"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "nullsec-exfil"
path = "src/main.rs"
